fixed issue with overflow

--- a/frontend/src/Hero/Hero.css
+++ b/frontend/src/Hero/Hero.css
@@ -4,9 +4,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  /* height: 100vh; */
   opacity: 0.75;
-  width: 100%;
 }
 
 #hero-header {
