--- a/frontend/src/Navigation/Navigation.css
+++ b/frontend/src/Navigation/Navigation.css
@@ -52,10 +52,14 @@
   display: flex;
   height: 100vh;
   justify-content: center;
+  /* opacity: 0; */
   padding: 4.8rem;
+  pointer-events: none;
   position: absolute;
-  right: -100%;
+  right: 0;
   transition: all 0.2s;
+  transform: translateX(100%);
+  /* visibility: hidden; */
   width: 30%;
   z-index: 2;
 }
@@ -69,7 +73,11 @@
 }
 
 .show-navigation-container {
+  opacity: 1;
+  pointer-events: auto;
   right: 0;
+  transform: translateX(0);
+  visibility: visible;
 }
 
 .navigation-link {
